examples/java/failing/imitate_separators_outside_of_conflict/Left.java

public interface Jsonizable {
        String getId();
        String serialize();
}
